--- a/styles/style.css
+++ b/styles/style.css
@@ -60,8 +60,8 @@ ol {
 }
 
 .content__details {
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
 }
 
 .search-form {
@@ -77,8 +77,8 @@ ol {
   position: relative;
   display: flex;
   flex-direction: column;
-  max-height: 298px;
-  height: 100%;
+  max-block-size: 298px;
+  block-size: 100%;
   overflow-y: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -117,13 +117,13 @@ ol {
 
 .result__video-container {
   position: relative;
-  width: 711px;
-  height: 386px;
+  inline-size: 711px;
+  block-size: 386px;
 }
 
 .result__video {
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -135,8 +135,10 @@ ol {
 }
 
 .content__video-card-thumbnail {
-  width: 194px;
-  height: 103px;
+  inline-size: 194px;
+  block-size: 103px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .content__card-link {
